--- a/remmina/umbrel-app.yml
+++ b/remmina/umbrel-app.yml
@@ -1,12 +1,10 @@
 manifestVersion: 1
 id: remmina
 category: Networking
-name: remmina
+name: Remmina
 version: "1.4.2"
 tagline: Remote access screen and file sharing to your desktop
-
 description: >-
-
   Use other desktops remotely, from a tiny screen or large monitors.
 
 
@@ -25,15 +23,13 @@ description: >-
   What is libre software?
 
 
-  The ability to use, see, modify, and share with all. Requiring sharing on equal terms is what (additionally) makes it copyleft, meaning none of these software freedoms can be taken away.
-
-
-
-developer: Remmina Org
-website: https://remmina.org/
+  The ability to use, see, modify, and share with all.
+  Requiring sharing on equal terms is what (additionally) makes it copyleft, meaning none of these software freedoms can be taken away.
+developer: Remmina
+website: https://remmina.org
 dependencies: []
 repo: https://gitlab.com/Remmina/Remmina
-support: https://gitlab.com/Remmina/Remmina
+support: https://www.remmina.org/support/
 port: 8764
 gallery:
   - 1.jpg
@@ -43,4 +39,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/291
