--- a/remmina/docker-compose.yml
+++ b/remmina/docker-compose.yml
@@ -3,12 +3,11 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: remmina
+      APP_HOST: remmina_server_1
       APP_PORT: 3000
 
   server:
-    image: lscr.io/linuxserver/remmina:1.4.2@sha256:75e116a8c3fa0a74b4354bb80944e89f893e6e238ca800ab9483edfe2279b37d
-    container_name: remmina
+    image: linuxserver/remmina:1.4.2@sha256:dc9972f1707e86ffec0544e296071a64feb6919e245d3b04068ce6549acfc0d9
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
     restart: on-failure
