--- a/remmina/umbrel-app.yml
+++ b/remmina/umbrel-app.yml
@@ -3,7 +3,7 @@ id: remmina
 category: Networking
 name: Remmina
 version: "1.4.2"
-tagline: Remote access screen and file sharing to your desktop
+tagline: Remote access screen and file sharing
 description: >-
   Use other desktops remotely, from a tiny screen or large monitors.
 
