--- a/snapdrop/umbrel-app.yml
+++ b/snapdrop/umbrel-app.yml
@@ -3,13 +3,13 @@ id: snapdrop
 category: Networking
 name: Snapdrop
 version: "89"
-tagline: Opensource Apple's Airdrop Alternative
+tagline: Opensource Apple Airdrop Alternative
 description: >-
   Snapdrop - local file sharing in your browser. Inspired by Apple's Airdrop.
 
 
 
-  Snapdrop is built with the following awesome technologies :
+  Snapdrop is built with the following awesome technologies:
   
   
   - Vanilla HTML5 / ES6 / CSS3 frontend
@@ -21,13 +21,12 @@ description: >-
   - NodeJS backend
 
 
-  - Progressive Web App
-
+  - Progressive Web App (PWA)
 developer: RobinLinus
-website: https://github.com/RobinLinus/snapdrop
+website: https://snapdrop.net/
 dependencies: []
 repo: https://github.com/RobinLinus/snapdrop
-support: https://github.com/RobinLinus/snapdrop
+support: https://github.com/RobinLinus/snapdrop/blob/master/docs/faq.md
 port: 8222
 gallery:
   - 1.jpg
@@ -37,5 +36,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: Pranshu Agrawal
-submission:
-
+submission: https://github.com/getumbrel/umbrel-apps/pull/290
