--- a/snapdrop/docker-compose.yml
+++ b/snapdrop/docker-compose.yml
@@ -3,13 +3,11 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: snapdrop
+      APP_HOST: snapdrop_server_1
       APP_PORT: 80
 
-  snapdrop:
-    image: lscr.io/linuxserver/snapdrop:version-89b0bcc2@sha256:1724466cb95b080027122dbfbf281d49d119a01daef295b77a1f1b978d39151f
-    container_name: snapdrop
+  server:
+    image: linuxserver/snapdrop:version-f769a766@sha256:95a90322a364daed0253dc41f0d7451cc9c67e31f17b09e91a51a80d02c5d4ff
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
     restart: on-failure
-
