--- a/snapdrop/umbrel-app.yml
+++ b/snapdrop/umbrel-app.yml
@@ -3,7 +3,7 @@ id: snapdrop
 category: Networking
 name: Snapdrop
 version: "89"
-tagline: Opensource Apple Airdrop Alternative
+tagline: Opensource Airdrop Alternative
 description: >-
   Snapdrop - local file sharing in your browser. Inspired by Apple's Airdrop.
 
