--- a/snapdrop/docker-compose.yml
+++ b/snapdrop/docker-compose.yml
@@ -11,3 +11,6 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
     restart: on-failure
+    environment:
+      - PUID=1000
+      - PGID=1000
