Use hash for version

--- a/snapdrop/umbrel-app.yml
+++ b/snapdrop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: snapdrop
 category: Networking
 name: Snapdrop
-version: "89"
+version: "f769a766"
 tagline: Opensource Airdrop Alternative
 description: >-
   Snapdrop - local file sharing in your browser. Inspired by Apple's Airdrop.
