--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -11,6 +11,7 @@ services:
 
   server:
     image: n8nio/n8n:0.207.1@sha256:a4702a77217b449723a98030e3c47a0267c0ceee97a8684184fdfebec0712b5f
+    user: 1000:1000
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data:/home/node/.n8n
