--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -11,11 +11,12 @@ services:
 
   server:
     image: n8nio/n8n:0.207.1@sha256:a4702a77217b449723a98030e3c47a0267c0ceee97a8684184fdfebec0712b5f
-    user: 1000:1000
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data:/home/node/.n8n
     stop_grace_period: 1m
     environment:
+      - PUID=1000
+      - PGID=1000
       # Used to set the url for editor, REST API & webhooks
       - N8N_HOST=$DEVICE_DOMAIN_NAME
