--- a/quant-ux/docker-compose.yml
+++ b/quant-ux/docker-compose.yml
@@ -1,38 +1,31 @@
-version: '3'
+version: "3.7"
 
 services:
   app_proxy:
     environment:
-      APP_HOST: quant-ux-frontend
+      APP_HOST: quant-ux_frontend_1
       APP_PORT: 8082
-  mongo:
+  
+  db:
+    image: mongo:6.0.3@sha256:c015870b10451c414911aff5648495bd3fcc9fe0cec340f46bb852706697a72f
     restart: on-failure
-    container_name: quant-ux-mongo
-    image: mongo
     volumes:
-      - ${APP_DATA_DIR}/data:/data/db
-  qux-fe:
-    restart: on-failure
-    container_name: quant-ux-frontend
+      - ${APP_DATA_DIR}/data/db:/data/db
+  
+  frontend:
     image: bmcgonag/qux-fe:1.4.0@sha256:e7da7bf60dccda9f29d261bfd7baa22a37ed7adc3d5869c4495300d2991e0660
-    environment:
-      - QUX_PROXY_URL=http://quant-ux-backend:8080
-    links:
-      - mongo
-      - qux-be
-    depends_on:
-      - qux-be
-  qux-be:
     restart: on-failure
-    container_name: quant-ux-backend
-    image: bmcgonag/qux-be:1.4.0@sha256:be51255ec422e508e227056c1bc89f746462aca20cfdf89bb9bef796a96481cf
     environment:
-      - QUX_HTTP_HOST=http://quant-ux-frontend:8082
+      - QUX_PROXY_URL=http://quant-ux_backend_1:8080
+  
+  backend:
+    image: bmcgonag/qux-be:1.4.0@sha256:be51255ec422e508e227056c1bc89f746462aca20cfdf89bb9bef796a96481cf
+    restart: on-failure
+    environment:
+      - QUX_HTTP_HOST=http://quant-ux_frontend_1:8082
       - QUX_HTTP_PORT=8080
       - QUX_MONGO_DB_NAME=quantux
       - QUX_MONGO_TABLE_PREFIX=quantux
-      - QUX_MONGO_CONNECTION_STRING=mongodb://quant-ux-mongo:27017
+      - QUX_MONGO_CONNECTION_STRING=mongodb://quant-ux_db_1:27017
       - QUX_IMAGE_FOLDER_USER=/qux-images
       - QUX_IMAGE_FOLDER_APPS=/qux-image-apps
-    depends_on:
-      - mongo
