--- a/quant-ux/umbrel-app.yml
+++ b/quant-ux/umbrel-app.yml
@@ -1,59 +1,41 @@
 manifestVersion: 1
 id: quant-ux
 category: Development
-name: quant-ux
-version: "1.13.0"
-tagline: OpenSource Figma Alternative
+name: Quant-UX
+version: "1.4.0"
+tagline: Prototype, Test and Learn
 description: >-
   Quant UX is a research, usability and prototyping tool to quickly test your designs and get data driven insights.
 
+  
   Prototypes that feel real.
 
 
   All prototypes are fully interactive. Use input widgets, animations and data to make your prototype feel like a real app.
 
 
-  Visual Designer:
+  Visual Designer: Use the powerful canvas to build amazing prototypes. Simply create screens, add interactive components and link the screens.
 
 
-  Use the powerful canvas to build amazing prototypes. Simply create screens, add interactive components and link the screens.
+  Design Tokens: Design tokens make it easy to define common styles that grow with your prototypes.
 
 
-  Design Tokens:
+  Design Systems: Build a scallable design system by using Components, Design Tokens and Master Screens and share them it multiple prototypes.
 
 
-  Design tokens make it easy to define common styles that grow with your prototypes.
+  Animations: Use the Animation Composer to create stunning animations and make your prototypes feel more realistic.
 
 
-  Design Systems:
+  Rich Component Palette: The large palette of fully functional components give you a head start! You can start right away to design WireFrame, IOS, Android, OpenUI5 or Lightning prototypes.
 
 
-  Build a scallable design system by using Components, Design Tokens and Master Screens and share them it multiple prototypes.
-
-
-  Animations:
-
-
-  Use the Animation Composer to create stunning animations and make your prototypes feel more realistic.
-
-
-  Rich Component Palette:
-
-
-  The large palette of fully functional components give you a head start! You can start right away to design WireFrame, IOS, Android, OpenUI5 or Lightning prototypes.
-
-
-  A / B Testing:
-
-
-  The A / B test operator allows you to compare different design in one propotype. Choose the better version and create an improved version and benchmark it again.
-
+  A / B Testing: The A / B test operator allows you to compare different design in one propotype. Choose the better version and create an improved version and benchmark it again.
 developer: Klaus Schaefers
-website: https://www.quant-ux.com/#/
+website: https://www.quant-ux.com
 dependencies: []
 repo: https://github.com/KlausSchaefers/quant-ux
-support: https://github.com/KlausSchaefers/quant-ux
-port: 8082
+support: https://www.quant-ux.com/#/help.html
+port: 8095
 gallery:
   - 1.jpg
   - 2.jpg
@@ -62,6 +44,5 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
-permissions:
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/272
