Add user/group to mongo

--- a/quant-ux/docker-compose.yml
+++ b/quant-ux/docker-compose.yml
@@ -9,6 +9,7 @@ services:
   db:
     image: mongo:6.0.3@sha256:c015870b10451c414911aff5648495bd3fcc9fe0cec340f46bb852706697a72f
     restart: on-failure
+    user: 1000:1000
     volumes:
       - ${APP_DATA_DIR}/data/db:/data/db
   
