Add submission url

--- a/seafile/umbrel-app.yml
+++ b/seafile/umbrel-app.yml
@@ -99,4 +99,4 @@ deterministicPassword: false
 defaultUsername: "me@example.com"
 defaultPassword: "asecret"
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/281
