--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: rotki
 category: Finance
 name: rotki
-version: "1.26.1"
+version: "1.26.2"
 tagline: Portfolio tracking, analytics, accounting and tax reporting
 description: >-
   rotki is an open source portfolio tracking, analytics, accounting and tax reporting tool that protects your privacy. 
@@ -24,6 +24,13 @@ dependencies: []
 repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
+releaseNotes: >-
+  Rotki v1.26.2 is a patch release on top of v1.26.1 fixing various issues you guys found in the last month. Among other things it fixes issues with binance csv imports, stops unnecessary balance refreshes and updates the default ethereum open nodes to stop querying nodes that are no longer online and query more reliable nodes.
+  
+  From this release and on we enabled seasonal icons! You may notice rotki has a more festive spirit 🐦 🎅
+  
+  Read more over here : https://github.com/rotki/rotki/releases/tag/v1.26.2
+  
 gallery:
   - 1.jpg
   - 2.jpg
