--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -25,12 +25,11 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  Rotki v1.26.2 is a patch release on top of v1.26.1 fixing various issues you guys found in the last month. Among other things it fixes issues with binance csv imports, stops unnecessary balance refreshes and updates the default ethereum open nodes to stop querying nodes that are no longer online and query more reliable nodes.
+  Fixes issues with Binance csv imports, stops unnecessary balance refreshes and updates the default Ethereum open nodes to stop querying nodes that are no longer online and query more reliable nodes.
   
   From this release and on we enabled seasonal icons! You may notice rotki has a more festive spirit 🐦 🎅
   
-  Read more over here : https://github.com/rotki/rotki/releases/tag/v1.26.2
-  
+  Full changelog can be found here: https://github.com/rotki/rotki/releases/tag/v1.26.2
 gallery:
   - 1.jpg
   - 2.jpg
