--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -25,7 +25,7 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  - Fixes issues with Binance csv imports, stops unnecessary balance refreshes and updates the default Ethereum open nodes to stop querying nodes that are no longer online and query more reliable nodes.
+  - Fixes issues with Binance CSV imports, stops unnecessary balance refreshes and updates the default Ethereum open nodes to stop querying nodes that are no longer online and query more reliable nodes.
   
   - From this release and on we enabled seasonal icons! You may notice rotki has a more festive spirit 🐦 🎅
   
