Disable app proxy auth

--- a/wikijs/docker-compose.yml
+++ b/wikijs/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: wikijs_server_1
       APP_PORT: 3000
+      PROXY_AUTH_ADD: "false"
   
   server:
     image: linuxserver/wikijs:2.5.294@sha256:e9f79a619fb0da03dc2e20d1543a02eb655f09a1a112c6998ebd584ada533d66
