--- a/bitcoin/docker-compose.yml
+++ b/bitcoin/docker-compose.yml
@@ -7,9 +7,12 @@ services:
       APP_PORT: 3005
   
   server:
-    image: getumbrel/umbrel-bitcoin:v0.3.0@sha256:115af951d7a4e696603c7468bcb4e119e02fe9c9deb28edb51d2e2d8207cab59
+    image: getumbrel/umbrel-bitcoin:v0.4.0@sha256:c857f9030efc43d8bd3c0f3f4e4f90f5d8d57cdf820ad17405fee1ae537d5f53
     depends_on: [bitcoind]
     restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/data/app:/data # volume to persist advanced settings json
+      - ${APP_BITCOIN_DATA_DIR}:/bitcoin/.bitcoin # volume to persist umbrel-bitcoin.conf and bitcoin.conf
     environment:
       PORT: "3005"
       BITCOIN_HOST: "${APP_BITCOIN_NODE_IP}"
@@ -23,14 +26,23 @@ services:
       BITCOIN_P2P_HIDDEN_SERVICE: "${APP_BITCOIN_P2P_HIDDEN_SERVICE}"
       BITCOIN_P2P_PORT: "${APP_BITCOIN_P2P_PORT}"
       DEVICE_DOMAIN_NAME: "${DEVICE_DOMAIN_NAME}"
+      BITCOIN_DEFAULT_NETWORK: "${BITCOIN_DEFAULT_NETWORK:-mainnet}"
+      BITCOIN_INITIALIZE_WITH_CLEARNET_OVER_TOR: "${BITCOIN_INITIALIZE_WITH_CLEARNET_OVER_TOR:-unset}"
+      BITCOIND_IP: "${APP_BITCOIN_NODE_IP}"
+      TOR_PROXY_IP: "${APP_BITCOIN_TOR_PROXY_IP}"
+      TOR_PROXY_PORT: "9050"
+      TOR_PROXY_CONTROL_PORT: "9051"
+      TOR_PROXY_CONTROL_PASSWORD: "moneyprintergobrrr"
+      I2P_DAEMON_IP: "${APP_BITCOIN_I2P_DAEMON_IP}"
+      I2P_DAEMON_PORT: "7656"
     networks:
       default:
         ipv4_address: $APP_BITCOIN_IP
 
   bitcoind:
-    image: lncm/bitcoind:v24.0@sha256:db19fe46f30acd3854f4f0d239278137d828ce3728f925c8d92faaab1ba8556a
+    image: getumbrel/bitcoind:v24.0.1@sha256:33ff257bd8a24b41bef5b5c3aea1e32ea6dcc08917e24122728687eb393814fa
     command: "${APP_BITCOIN_COMMAND}"
-    restart: on-failure
+    restart: unless-stopped
     stop_grace_period: 15m30s
     volumes:
       - "${APP_BITCOIN_DATA_DIR}:/data/.bitcoin"
@@ -50,3 +62,17 @@ services:
       - ${TOR_DATA_DIR}:/data
     environment:
       HOME: "/tmp"
+    networks:
+      default:
+        ipv4_address: "${APP_BITCOIN_TOR_PROXY_IP}"
+  
+  i2pd_daemon:
+    image: purplei2p/i2pd:release-2.44.0@sha256:d154a599793c393cf9c91f8549ba7ece0bb40e5728e1813aa6dd4c210aa606f6
+    user: "root"
+    command: --sam.enabled=true --sam.address=0.0.0.0 --sam.port=7656 --loglevel=error
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/data/i2pd:/home/i2pd/data
+    networks:
+      default:
+        ipv4_address: "${APP_BITCOIN_I2P_DAEMON_IP}"
