Update Specter Desktop to v1.14.2 (#338)
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: specter-desktop
 category: Finance
 name: Specter Desktop
-version: "1.14.1"
+version: "1.14.2"
 tagline: Multisig with hardware wallets made easy
 description: >-
   Specter Desktop connects to the Bitcoin Core running on your Umbrel
@@ -44,31 +44,38 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - Feature: Spectrum addition #1952 (k9ert)
+  - UIUX: Address labeling revamp #1978 (OTK & Manolis Mandrapilias)
 
-  - Feature: Several things for Spectrum preparation #1913 (k9ert)
+  - UIUX: Better node selection #1987 (Manolis Mandrapilias)
 
-  - Feature: QR support for Jade #1964 (Manolis Mandrapilias)
+  - UIUX: Update Passport connection instructions #2010 (BitcoinQnA)
 
-  - Feature: Add taproot psbt fields #1837 (kdmukai)
+  - Bugfix: Long loading time of wallets at start-up with Spectrum #2015 (k9ert)
 
-  - Feature: QR message signing for SeedSigner #1938 (kdmukai)
+  - Bugfix: Merkle proofs with Spectrum #2012 (k9ert)
 
-  - Feature: Implement JWT authentication in REST API #1785 (Ankur)
+  - Bugfix: Addressinfo edge case fixed #2001 (relativisticelectron)
 
-  - Feature: Deactivate hot wallets for Spectrum #1999 (Manolis Mandrapilias)
+  - Bugfix: Version not properly detected #2020 (k9ert)
 
-  - Feature: Extensions can add new devices #1887 (k9ert)
+  - Chore: Generic error handling for API calls #2014 (k9ert)
 
-  - Feature: `--devstatus-threshold` for cli_server #1945 (k9ert)
+  - Chore: Moving the Spectrum extension to a core extension #2011 (k9ert)
 
-  - Security: CVE-2007-4559 Patch #1927 (TrellixVulnTeam)
+  - Chore: Bump qs from 6.5.2 to 6.5.3 in /pyinstaller/electron #2002 (dependabot[bot])
+
+  - Chore: Bump Spectrum and Python version #2027 (Manolis Mandrapilias)
+
+  - Chore: Cypress test for address labeling #2021 (Manolis Mandrapilias)
+
+  - Chore: Fix nix shell by generating hashes with pip-compile #2016 (hodlwave)
+
+  - Docs: Corrected build instructions #1996 (relativisticelectron)
   
-  - Bugfix: Adding migrations to the hidden imports #2007 (k9ert)
-
-  - Bugfix: Bump Spectrum for better error_handling (k9ert)
   
-  Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v1.14.1
-
+  Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v1.14.2
+  
+  
+  Compare to previous version: https://github.com/cryptoadvance/specter-desktop/compare/v1.14.1...v1.14.2
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
