Change category to Files

--- a/snapdrop/umbrel-app.yml
+++ b/snapdrop/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: snapdrop
-category: Networking
+category: Files
 name: Snapdrop
 version: "f769a766"
 tagline: Opensource Airdrop Alternative
