--- a/quant-ux/umbrel-app.yml
+++ b/quant-ux/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: quant-ux
 category: Development
-name: Quant-UX
+name: Quant UX
 version: "1.4.0"
 tagline: Prototype, Test and Learn
 description: >-
