--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -31,7 +31,7 @@ defaultUsername: ""
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
-  Various internal improvements
+  Various internal improvements:
   
   - FTL v5.20
   
