--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -3,7 +3,7 @@ id: audiobookshelf
 name: Audiobookshelf
 tagline: Audiobook and podcast server
 category: Media
-version: "2.2.8"
+version: "2.2.11"
 port: 13378
 description: >-
   Features:
@@ -60,5 +60,17 @@ dependencies: []
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  Added: 
+    - M4B merge tool advanced options for ffmpeg encoder
+
+  Fixed: 
+    - Crash on adding podcast
+    - Dropdowns hidden in edit modals
+    - Get libraries API endpoint (bad response payload)
+
+  Changed: 
+    - API endpoint for author image allows raw=1 query to get raw image
+    - More strings translated: french, simplified Chinese, & German
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/302
