--- a/audiobookshelf/docker-compose.yml
+++ b/audiobookshelf/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     environment:
       APP_HOST: audiobookshelf_web_1
       APP_PORT: 80
-      PROXY_AUTH_WHITELIST: "/login"
+      PROXY_AUTH_WHITELIST: "*"
+      PROXY_AUTH_BLACKLIST: "/login"
+
 
   web:
     image: ghcr.io/advplyr/audiobookshelf:2.2.11@sha256:6a3a3dceeb669b477851ce54d96c2140868e19606b0193ccbb3e98151e5b8e5e
