Set default username/password

--- a/invoice-ninja/docker-compose.yml
+++ b/invoice-ninja/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       DB_DATABASE: invoiceninja
       DB_USERNAME: invoiceninja
       DB_PASSWORD: moneyprintergobrrr
+      IN_USER_EMAIL: "admin@example.com"
+      IN_PASSWORD: $APP_PASSWORD
 
   db:
     image: mariadb:10.5.12@sha256:dfcba5641bdbfd7cbf5b07eeed707e6a3672f46823695a0d3aba2e49bbd9b1dd
