--- a/invoice-ninja/umbrel-app.yml
+++ b/invoice-ninja/umbrel-app.yml
@@ -19,6 +19,7 @@ gallery:
 - 2.jpg
 - 3.jpg
 path: ''
-defaultPassword: ''
+deterministicPassword: true
+defaultUsername: admin@example.com
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/345
