--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: rotki
 category: Finance
 name: rotki
-version: "1.26.2"
+version: "1.26.3"
 tagline: Portfolio tracking, analytics, accounting and tax reporting
 description: >-
   rotki is an open source portfolio tracking, analytics, accounting and tax reporting tool that protects your privacy. 
@@ -25,11 +25,13 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  - Fixes issues with Binance CSV imports, stops unnecessary balance refreshes and updates the default Ethereum open nodes to stop querying nodes that are no longer online and query more reliable nodes.
+  - Fixes issues where balance is not fully refreshed after detect tokens button pressed.
   
-  - From this release and on we enabled seasonal icons! You may notice rotki has a more festive spirit 🐦 🎅
+  - Connecting to substrate nodes will no longer timeout prematurely for systems with slow connections.
   
-  - Full changelog can be found here: https://github.com/rotki/rotki/releases/tag/v1.26.2
+  - Transfers between tracked accounts will now have a correct label in the UI.
+  
+  - Full changelog can be found here: https://github.com/rotki/rotki/releases/tag/v1.26.3
 gallery:
   - 1.jpg
   - 2.jpg
