--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -31,7 +31,8 @@ releaseNotes: >-
   
   - Transfers between tracked accounts will now have a correct label in the UI.
   
-  - Full changelog can be found here: https://github.com/rotki/rotki/releases/tag/v1.26.3
+  
+  Full changelog can be found here: https://github.com/rotki/rotki/releases/tag/v1.26.3
 gallery:
   - 1.jpg
   - 2.jpg
