Updated to v1.0.0 of docker image. this allows for autoupdating of binary

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "0.4.1"
+version: "1.0.0"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -34,3 +34,4 @@ deterministicPassword: true
 torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
+releaseNotes: Updated the binary such that it will automatically download the latest urbit binary on startup. This should allow people to stay up to date on everything.
