--- a/urbit/docker-compose.yml
+++ b/urbit/docker-compose.yml
@@ -2,16 +2,18 @@ version: "3.3"
 services:
   app_proxy:
     environment:
-      APP_HOST: urbit_manager_1
+      APP_HOST: $APP_URBIT_IP
       APP_PORT: 8090
-
   manager:
-    image: mopfelwinrux/urbit-umbrel:v0.4.1@sha256:083db8cdb2109f29c65e186b47eeecdacd5d8021ce1c4593cf8a9f945f646171
+    image: mopfelwinrux/urbit-umbrel:v1.0.0@sha256:8b0eec5de898d13bd237f6d5b24b9d5fecc6843d2997e3654279e72bdb82c171
     ports:
-      - "34343:34343"
+      - "${APP_URBIT_P2P_PORT}:34343"
     volumes:
       - ${APP_DATA_DIR}/piers:/data/piers
       - ${APP_DATA_DIR}/keys:/data/keys
     environment:
       FLASK_APP: app
       APP_PASSWORD: ${APP_PASSWORD}
+    networks:
+      default:
+        ipv4_address: $APP_URBIT_IP
