Update release notes for Kollider app

--- a/kollider/umbrel-app.yml
+++ b/kollider/umbrel-app.yml
@@ -29,6 +29,8 @@ gallery:
   - 3.jpg
 path: ""
 deterministicPassword: true
+releaseNotes: >
+  - Update python dependency pyzmq to fix raspberry pi crash
 torOnly: false
 submitter: Kollider
 submission: https://github.com/getumbrel/umbrel/pull/1221
