Updated for megre

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -34,4 +34,4 @@ deterministicPassword: true
 torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
-releaseNotes: Updated the binary such that it will automatically download the latest urbit binary on startup. This should allow people to stay up to date on everything.
+releaseNotes: Updated to the latest 1.15 binary
