--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: core-lightning
 category: Finance
 name: Core Lightning
-version: "0.11.1-build-5"
+version: "22.11.1"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
@@ -38,4 +38,15 @@ defaultPassword: ""
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
 releaseNotes: >-
-  - Support for testnet, signet and regtest 
+  - We reintroduced a number of deprecated features, since some integrations had missed the deprecation window, and asked for some more time to update their apps
+
+  - The new experimental reckless plugin manager can be used to download, install and uninstall plugins on the fly. We have many new features planned for it, so stay tuned.
+
+  - When receiving a keysend any extra TLV fields will be stored so they can be retrieved later.
+
+  - The --database-update=false flag allows users wanting to test unreleased versions from accidentally upgrading the database, and then be unable to switch to a released version again.
+
+  - Several performance issues, particularly for larger nodes, have been addressed
+
+
+  And much more. Full changelog from v0.11.1 can be found here: https://github.com/ElementsProject/lightning/releases
