Update Kollider to v1.0.7 (#351)

--- a/kollider/umbrel-app.yml
+++ b/kollider/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: kollider
 category: Finance
 name: Kollider
-version: "1.0.6"
+version: "1.0.7"
 tagline: Lightning-fast derivative trading
 description: >-
   Kollider lets you instantly trade perpetual contracts with low fees
@@ -29,6 +29,8 @@ gallery:
   - 3.jpg
 path: ""
 deterministicPassword: true
+releaseNotes: >
+  - Update python dependency pyzmq to fix raspberry pi crash
 torOnly: false
 submitter: Kollider
 submission: https://github.com/getumbrel/umbrel/pull/1221
