--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -34,4 +34,5 @@ deterministicPassword: true
 torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
-releaseNotes: Updated to the latest 1.15 binary
+releaseNotes: >-
+  - Updated to the latest 1.15 binary
