--- a/urbit/docker-compose.yml
+++ b/urbit/docker-compose.yml
@@ -2,18 +2,16 @@ version: "3.3"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_URBIT_IP
+      APP_HOST: urbit_manager_1
       APP_PORT: 8090
+  
   manager:
     image: mopfelwinrux/urbit-umbrel:v1.15.0@sha256:f0f908dc1069b606e5fb45b407f9729f84b1f031932b4ddfcc7ca998d0fa90bc
     ports:
-      - "${APP_URBIT_P2P_PORT}:34343"
+      - "34343:34343"
     volumes:
       - ${APP_DATA_DIR}/piers:/data/piers
       - ${APP_DATA_DIR}/keys:/data/keys
     environment:
       FLASK_APP: app
       APP_PASSWORD: ${APP_PASSWORD}
-    networks:
-      default:
-        ipv4_address: $APP_URBIT_IP
