--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -3,11 +3,11 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: immich_immich-proxy_1
+      APP_HOST: immich_proxy_1
       APP_PORT: 8080
       PROXY_AUTH_ADD: "false"
 
-  immich-server:
+  server:
     image: altran1502/immich-server:v1.40.0_63-dev@sha256:c61f6c5373efb4544db8d04e6e090b77561b71b07d4f272821a6349a18531e37
     entrypoint: ["/bin/sh", "./start-server.sh"]
     volumes:
@@ -29,7 +29,7 @@ services:
       - postgres
     restart: on-failure
 
-  immich-microservices:
+  microservices:
     image: altran1502/immich-server:v1.40.0_63-dev@sha256:c61f6c5373efb4544db8d04e6e090b77561b71b07d4f272821a6349a18531e37
     entrypoint: ["/bin/sh", "./start-microservices.sh"]
     volumes:
@@ -51,7 +51,7 @@ services:
       - postgres
     restart: on-failure
 
-  immich-machine-learning:
+  machine-learning:
     image: altran1502/immich-machine-learning:v1.40.0_63-dev@sha256:a5e660247a5a3c1d1b4ab9d160629def546d7e86e534a55d5ebc0e0eee5cef1a
     entrypoint: ["/bin/sh", "./entrypoint.sh"]
     volumes:
@@ -72,7 +72,7 @@ services:
       - postgres
     restart: on-failure
 
-  immich-web:
+  web:
     image: altran1502/immich-web:v1.40.0_63-dev@sha256:abad6488afaa1d0b4b8ea818221b86e7b45bf72a1ea328d8c0f35ad266b9e544
     entrypoint: ["/bin/sh", "./entrypoint.sh"]
     environment:
@@ -88,13 +88,13 @@ services:
       PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
     restart: on-failure
 
-  immich-proxy:
+  proxy:
     image: altran1502/immich-proxy:v1.40.0_63-dev@sha256:f779b86497b3d4b8822ec0d7341cfd2d1f1688b8859c70a9b16bd36d01468865
     environment:
-      IMMICH_WEB_URL: "http://immich_immich-web_1"
-      IMMICH_SERVER_URL: "http://immich_immich-server_1"
+      IMMICH_WEB_URL: "http://immich_web_1"
+      IMMICH_SERVER_URL: "http://immich_server_1"
     depends_on:
-      - immich-server
+      - server
     restart: on-failure
 
   redis:
