Whitelist /api has it uses its own auth. mechanism

--- a/invoice-ninja/docker-compose.yml
+++ b/invoice-ninja/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: invoice-ninja_nginx_1
       APP_PORT: 80
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   nginx:
     image: nginx:1.21-alpine@sha256:686aac2769fd6e7bab67663fd38750c135b72d993d0bb0a942ab02ef647fc9c3
