Set server url for web service

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -86,6 +86,7 @@ services:
       DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
       REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
       PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
+      PUBLIC_IMMICH_SERVER_URL: "http://immich_server_1:3001"
     restart: on-failure
 
   proxy:
