Protect with app proxy but whitelist API

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       APP_HOST: immich_proxy_1
       APP_PORT: 8080
-      PROXY_AUTH_ADD: "false"
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
     image: altran1502/immich-server:v1.40.0_63-dev@sha256:c61f6c5373efb4544db8d04e6e090b77561b71b07d4f272821a6349a18531e37
