--- a/simple-torrent/umbrel-app.yml
+++ b/simple-torrent/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: simple-torrent
 category: Networking
 name: SimpleTorrent
-version: "1.3.9"
+version: "1.3.9-hotfix-1"
 tagline: Download torrents with your Umbrel
 description: >-
   SimpleTorrent is a a self-hosted remote torrent client that starts
@@ -28,6 +28,8 @@ description: >-
   - Protocol Handler to magnet:
 
   - Magnet RSS subscribing supported
+releaseNotes: >-
+  - Migrate downloads from local (app) directory to Umbrel's shared downloads directory
 developer: Preston
 website: https://github.com/boypt
 dependencies: []
