Add additional release notes
Co-authored-by: Mayank Chhabra <mayankchhabra9@gmail.com>

--- a/simple-torrent/umbrel-app.yml
+++ b/simple-torrent/umbrel-app.yml
@@ -29,7 +29,7 @@ description: >-
 
   - Magnet RSS subscribing supported
 releaseNotes: >-
-  - Migrate downloads from local (app) directory to Umbrel's shared downloads directory
+  - SimpleTorrent now utilizes the shared downloads folder that can be accessed by other apps on Umbrel, such as Jellyfin, FileBrowser, Transmission, Plex, and more.
 developer: Preston
 website: https://github.com/boypt
 dependencies: []
