--- a/audiobookshelf/docker-compose.yml
+++ b/audiobookshelf/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: audiobookshelf_web_1
       APP_PORT: 80
       PROXY_AUTH_WHITELIST: "/"
-      PROXY_AUTH_BLACKLIST: "/login,/api,/config"
+      PROXY_AUTH_BLACKLIST: "/api,/config"
 
 
   web:
