--- a/audiobookshelf/docker-compose.yml
+++ b/audiobookshelf/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     environment:
       APP_HOST: audiobookshelf_web_1
       APP_PORT: 80
-      PROXY_AUTH_WHITELIST: "/"
-      PROXY_AUTH_BLACKLIST: "/api,/config"
+      PROXY_AUTH_ADD: "false"
 
 
   web:
