Add mobile support to release notes

--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -61,6 +61,8 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
+  - Audiobookshelf now works with mobile apps (Android & iOS)
+
   Added: 
     - M4B merge tool advanced options for ffmpeg encoder
 
