--- a/audiobookshelf/docker-compose.yml
+++ b/audiobookshelf/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     environment:
       APP_HOST: audiobookshelf_web_1
       APP_PORT: 80
+      PROXY_AUTH_ADD: "false"
+
 
   web:
-    image: ghcr.io/advplyr/audiobookshelf:2.2.8@sha256:7b47d1b679bf0a884636fad7900390ee9880345b9377057f052f9066a4987d85
+    image: ghcr.io/advplyr/audiobookshelf:2.2.11@sha256:6a3a3dceeb669b477851ce54d96c2140868e19606b0193ccbb3e98151e5b8e5e
     user: 1000:1000
     init: true
     restart: on-failure
