--- a/nolooking/docker-compose.yml
+++ b/nolooking/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/pj"
   
   server:
-    image: chaincase/nolooking:v0.2.2-alpha@sha256:e4a95443a05b44659f55a20c592142d59a4d8f54830a71f4c3d22a3a6bf88801
+    image: chaincase/nolooking:v0.3.0-alpha@sha256:ba879c089e6609cb85869081c18bc36086984276c5cd73bce2a24ff5f53cc1f0
     restart: on-failure
     stop_grace_period: 1m
     init: true
@@ -23,3 +23,5 @@ services:
       DEVICE_DOMAIN_NAME: $DEVICE_DOMAIN_NAME
       APP_PASSWORD: $APP_PASSWORD
       APP_HIDDEN_SERVICE: $APP_HIDDEN_SERVICE
+      TOR_PROXY_IP: $TOR_PROXY_IP
+      TOR_PROXY_PORT: $TOR_PROXY_PORT
