--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -2,10 +2,10 @@ manifestVersion: 1
 id: nolooking
 category: Lightning Node Management 
 name: nolooking
-version: "0.2.2-alpha"
-tagline: Open all your channels in one transaction
+version: "0.3.0-alpha"
+tagline: Batch Channels using PayJoin
 description: >-
-  Nolooking leverages Pay-to-Endpoint (payjoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
+  Nolooking leverages Pay-to-Endpoint (PayJoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
 
 
   You can open multiple lightning channels in a single payment, improving privacy, saving on transaction fees and wait time.
@@ -16,9 +16,7 @@ description: >-
 
   Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
 releaseNotes: >-
-  - Recommend outbound nodes to open channels with.
-
-  - Display payjoin errors in app.
+  - Send PayJoin support
 developer: nolooking
 website: https://nolooking.chaincase.app
 dependencies:
