--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -13,11 +13,10 @@ dependencies: []
 repo: https://github.com/immich-app/immich
 support: https://github.com/immich-app/immich/discussions
 port: 2283
-icon: https://immich.app/img/color-logo.png
 gallery:
-  - https://github.com/immich-app/immich/raw/main/design/web-home.jpeg
-  - https://github.com/immich-app/immich/raw/main/design/web-detail.jpeg
-  - https://i.imgur.com/80HkbTL.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
