Add features to description

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -3,9 +3,44 @@ id: immich
 category: Files
 name: Immich
 version: "v1.40.1_63-dev"
-tagline: High performance self-hosted photo and video backup solution.
+tagline: High performance self-hosted photo and video backup solution
 description: >-
   An open source, high performance self-hosted backup solution for videos and photos on your mobile phone
+
+  
+  Features:
+  
+  - Upload and view videos and photos
+  
+  - Auto backup when the app is opened
+  
+  - Selective album(s) for backup
+  
+  - Download photos and videos to local device
+  
+  - Multi-user support
+  
+  - Album and Shared albums
+  
+  - Scrubbable/draggable scrollbar
+  
+  - Support RAW (HEIC, HEIF, DNG, Apple ProRaw)
+  
+  - Metadata view (EXIF, map)
+  
+  - Search by metadata, objects and image tags
+  
+  - Administrative functions (user management)
+  
+  - Background backup
+  
+  - Virtual scroll
+  
+  - OAuth support
+  
+  - LivePhoto backup and playback
+  
+  - User-defined storage structure
 releaseNotes: ""
 developer: Alex Tran
 website: https://www.immich.app
