--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -3,7 +3,7 @@ id: immich
 category: Files
 name: Immich
 version: "v1.40.1_63-dev"
-tagline: High performance self-hosted photo and video backup solution
+tagline: High performance photo and video backup solution
 description: >-
   An open source, high performance self-hosted backup solution for videos and photos on your mobile phone
 
