--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -5,7 +5,7 @@ name: Immich
 version: "v1.40.1_63-dev"
 tagline: High performance photo and video backup solution
 description: >-
-  An open source, high performance self-hosted backup solution for videos and photos on your mobile phone
+  An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
 
   
   Features:
