Update Torq to v0.16.3 (#363)

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: Lightning Node Management
 name: Torq
-version: "v0.15.4"
+version: "v0.16.3"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
   Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
@@ -43,7 +43,17 @@ gallery:
   - 3.jpg
   - 4.jpg
 releaseNotes: >-
-  This release contains bug fixes and new network select feature allowing user to select between mainnet and the other testnets.
+  This release fixes excessive memory consumption when importing invoices and drifting channel balances.
+
+  New features:
+
+  Tags! You can now tag channels and nodes!
+
+  Navigate using the flow diagram!
+
+  Quicker inspection of channels from both the forwards and channels page using pop out modal.
+
+  Update and close channels from the forwards page
 path: ""
 defaultUsername: ""
 deterministicPassword: true
