--- a/mercury-wallet/umbrel-app.yml
+++ b/mercury-wallet/umbrel-app.yml
@@ -2,19 +2,27 @@ manifestVersion: 1
 id: mercury-wallet
 category: Wallets
 name: Mercury Wallet
-version: "0.7.23"
-tagline: statechain bitcoin wallet
+version: "0.8.6"
+tagline: Statechain wallet with coinswap features
 description: >-
-
+  Mercury is a new Bitcoin layer-2 scaling technology, based on the concept of statechains, 
+  that enables private keys for BTC deposits (UTXOs) to be transfered securely between 
+  owners without requiring an on-chain transaction.
+  This enables users to transfer custody of coins to anyone almost instantly, with increased privacy, and without transaction fees.
 releaseNotes: >-
-
-developer: Commerceblock
+  - Swap registration synchronisation
+  - Timeout parameter updates
+  - Receive key verification
+developer: LayerTwoTech
 website: https://mercurywallet.com/
 dependencies:
 repo: https://github.com/layer2tech/mercury-wallet
 support: https://github.com/layer2tech/mercury-wallet/discussions
 port: 3000
 gallery:
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
