add release notes to umbrel-app.yml

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -25,5 +25,10 @@ gallery:
   - 3.jpg
 path: ""
 defaultPassword: ""
-submitter: Sam Cymbaluk
-submission: https://github.com/getumbrel/umbrel/pull/1092
+releaseNotes: >-
+  Bugfixes:
+  - #8572: Incorrect rescan interval on auto accepted encrypted folder
+  - #8646: Perhaps the list of devices contains empty elements
+  - #8686: Properly indicate whether a connection is "LAN" or not in the GUI
+submitter: jon-ryan
+submission: https://github.com/getumbrel/umbrel-apps/pull/370
