--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -30,5 +30,5 @@ releaseNotes: >-
   - #8572: Incorrect rescan interval on auto accepted encrypted folder
   - #8646: Perhaps the list of devices contains empty elements
   - #8686: Properly indicate whether a connection is "LAN" or not in the GUI
-submitter: jon-ryan
-submission: https://github.com/getumbrel/umbrel-apps/pull/370
+submitter: Sam Cymbaluk
+submission: https://github.com/getumbrel/umbrel/pull/1092
