Remove PR numbers

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -28,10 +28,10 @@ defaultPassword: ""
 releaseNotes: >-
   Bugfixes:
   
-  - #8572: Incorrect rescan interval on auto accepted encrypted folder
+  - Incorrect rescan interval on auto accepted encrypted folder
   
-  - #8646: Perhaps the list of devices contains empty elements
+  - Perhaps the list of devices contains empty elements
   
-  - #8686: Properly indicate whether a connection is "LAN" or not in the GUI
+  - Properly indicate whether a connection is "LAN" or not in the GUI
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
