Fixed binary extraction

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -39,4 +39,8 @@ releaseNotes: >-
 
   Use new Vere repo, fix binary extraction
 
-  This release is functionally equivalent to v1.15 but is built in the new Vere repo using Bazel instead of Nix with a new and improved release pipeline. It marks the successful extraction of the runtime from the Urbit monorepo. It also adds a new AArch64-specific macOS build and removes the Windows build.
+  This release is functionally equivalent to v1.15 but is built in the new
+  Vere repo using Bazel instead of Nix with a new and improved release
+  pipeline. It marks the successful extraction of the runtime from the
+  Urbit monorepo. It also adds a new AArch64-specific macOS build and
+  removes the Windows build.
