--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.16-hotfix1"
+version: "v1.16-hotfix2"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,8 +35,12 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  - Updated Urbit binary to v1.16
+  Updated Urbit binary to v1.16
 
-  - Fix URL with vere repo
+  Use new Vere repo, fix binary extraction
 
-  This release is functionally equivalent to v1.15 but is built in the new Vere repo using Bazel instead of Nix with a new and improved release pipeline. It marks the successful extraction of the runtime from the Urbit monorepo. It also adds a new AArch64-specific macOS build and removes the Windows build.
+  This release is functionally equivalent to v1.15 but is built in the new
+  Vere repo using Bazel instead of Nix with a new and improved release
+  pipeline. It marks the successful extraction of the runtime from the
+  Urbit monorepo. It also adds a new AArch64-specific macOS build and
+  removes the Windows build.
