--- a/lnmarkets/umbrel-app.yml
+++ b/lnmarkets/umbrel-app.yml
@@ -2,14 +2,14 @@ manifestVersion: 1
 id: lnmarkets
 category: Finance
 name: LN Markets
-version: "1.2.5"
+version: "1.3.0"
 tagline: Trade Bitcoin derivatives on Lightning
 description: >-
   LN Markets is the first Lightning-native Bitcoin derivatives
   trading platform.
 
 
-  LN Markets enables traders to take minimal counterparty risk: you can trade directly from your Lightning wallet for instant and almost costless transactions. Since March 2020, we have processed over $500 million of trading volume, with a median fee of 1 sat for instant P&L delivery to your wallet.
+  LN Markets enables traders to take minimal counterpart risk: you can trade directly from your Lightning wallet for instant and almost costless transactions. Since March 2020, we have processed over $500 million of trading volume, with a median fee of 1 sat for instant P&L delivery to your wallet.
 
 
   This Umbrel App gives you another way to interact with LN Markets: you can directly deposit, withdraw, get trading stats and get instantly connected to your account to take positions as usual. More features may come in the future!
@@ -32,4 +32,9 @@ deterministicPassword: true
 submitter: LN Markets
 submission: https://github.com/getumbrel/umbrel/pull/879
 releaseNotes: >-
-  - Remove deposit amount limitations
+  - New account generation method
+
+  - Old accounts automatically migrated on first login
+
+  - Automatic migration will be active for an undefined time span. It will be removed at some point in the future. We'll communicate on it in advance and any non migrated account by then will be considered lost.
+
