--- a/mercury-wallet/docker-compose.yml
+++ b/mercury-wallet/docker-compose.yml
@@ -7,14 +7,14 @@ services:
       APP_PORT: 3000
       
   web:
-    image: layer2tech/mercury-wallet-ui:latest
+    image: layer2tech/mercury-wallet-ui:0_8_6
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     ports:
       - 3000:3000
   walletserver:
-    image: layer2tech/mercury-tor-adapter:latest
+    image: layer2tech/mercury-tor-adapter:0_8_6
     user: "1000:1000"
     restart: on-failure
     ports:
