--- a/mercury-wallet/docker-compose.yml
+++ b/mercury-wallet/docker-compose.yml
@@ -7,14 +7,14 @@ services:
       APP_PORT: 3000
       
   web:
-    image: layer2tech/mercury-wallet-ui:0_8_6
+    image: layer2tech/mercury-wallet-ui:0_8_6@sha256:58a32c023d9e4ddfc7e1783e2289b3ce192ac063bc5809be88531769ddaa0bc1
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     ports:
       - 3000:3000
   walletserver:
-    image: layer2tech/mercury-tor-adapter:0_8_6
+    image: layer2tech/mercury-tor-adapter:0_8_6@sha256:07ade5fc5a01936a43f67e505846d4b87a0aee7235634671d6468771743923b2
     user: "1000:1000"
     restart: on-failure
     ports:
