--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.16-hotfix2"
+version: "v1.17"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,12 +35,34 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Updated Urbit binary to v1.16
+  Updated Urbit binary to v1.17
 
-  Use new Vere repo, fix binary extraction
-
-  This release is functionally equivalent to v1.15 but is built in the new
-  Vere repo using Bazel instead of Nix with a new and improved release
-  pipeline. It marks the successful extraction of the runtime from the
-  Urbit monorepo. It also adds a new AArch64-specific macOS build and
-  removes the Windows build.
+  This release includes a new and improved terminal stack, which is
+  required for compatibility with zuse 416 (urbit-os-v2.130). It remains
+  backwards compatible with the terminal stack as it existed prior to
+  this, but there is one purely visual issue: the prompt may seem to
+  disappear. This should resolve itself once you receive the zuse 416
+  update.
+  
+  Additionally, as of this release, we no longer support Windows
+  platforms. We do not presently have the resources to support non-*nix
+  systems at the level of quality we want to deliver. Notably Windows was
+  already very much a second-class citizen, as apparent from issues like
+  #5822 and others. Windows users may want to run Urbit through WSL
+  instead.
+  
+  Release notes:
+  
+  -   Revamped Urbit’s terminal stack. This release contains the first
+      phase of a longer-running project towards a next-generation terminal
+      experience. Previous announcements can be found here[^1] and
+      here[^2]. (And #4463 and #5663.) Highlights in this release include:
+      -   Support for 2D cursor movement, and by extension 2D screen
+          drawing.
+      -   Minimal mouse-click support.
+      -   Faster pasting of large texts.
+      -   Informal printfs (~&) now get rendered in grey, to visually
+          distinguish them from formal dill output.
+  -   Updated versioning scheme for pre-release binaries.
+  -   The code for the Vere runtime has been moved out of the urbit/urbit
+      repository, and now lives in urbit/vere.
