--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -55,14 +55,19 @@ releaseNotes: >-
   
   -   Revamped Urbit’s terminal stack. This release contains the first
       phase of a longer-running project towards a next-generation terminal
-      experience. Previous announcements can be found here[^1] and
-      here[^2]. (And #4463 and #5663.) Highlights in this release include:
+      experience. Highlights in this release include:
+      
       -   Support for 2D cursor movement, and by extension 2D screen
           drawing.
+          
       -   Minimal mouse-click support.
+      
       -   Faster pasting of large texts.
+      
       -   Informal printfs (~&) now get rendered in grey, to visually
           distinguish them from formal dill output.
+          
   -   Updated versioning scheme for pre-release binaries.
+  
   -   The code for the Vere runtime has been moved out of the urbit/urbit
       repository, and now lives in urbit/vere.
