--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: firefly-iii
 category: Finance
-name: Firely III
+name: Firefly III
 version: "5.7.18"
 tagline: Your personal finance manager
 description: >-
