--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -5,6 +5,9 @@ name: Firefly III
 version: "5.7.18"
 tagline: Your personal finance manager
 description: >-
+  Firefly III is a manager for your personal finances. It is self-hosted and open source. This means that it's free, it has no ads and no tracking.
+
+
   Full transaction management
 
   Firefly III features a double-entry bookkeeping system. You can quickly enter and organize your transactions in multiple currencies.
