--- a/firefly-iii/docker-compose.yml
+++ b/firefly-iii/docker-compose.yml
@@ -31,5 +31,5 @@ services:
     environment:
       MYSQL_DATABASE: "fireflyiii"
       MYSQL_USER: "fireflyiii"
-      MYSQL_PASSWORD: "fireflyiii"
+      MYSQL_PASSWORD: "moneyprintergobrrr"
       MYSQL_ROOT_PASSWORD: "moneyprintergobrrr"
