Whitelist /api with App Proxy

--- a/firefly-iii/docker-compose.yml
+++ b/firefly-iii/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: firefly-iii_server_1
       APP_PORT: 8080
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
     image: fireflyiii/core:version-5.7.18@sha256:f72a0dfcc2e12fb96d4a7f1e64834518692914ce40565904473f64401c1bda58
