Link to release notes URL

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -37,37 +37,4 @@ submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
   Updated Urbit binary to v1.17
 
-  This release includes a new and improved terminal stack, which is
-  required for compatibility with zuse 416 (urbit-os-v2.130). It remains
-  backwards compatible with the terminal stack as it existed prior to
-  this, but there is one purely visual issue: the prompt may seem to
-  disappear. This should resolve itself once you receive the zuse 416
-  update.
-  
-  Additionally, as of this release, we no longer support Windows
-  platforms. We do not presently have the resources to support non-*nix
-  systems at the level of quality we want to deliver. Notably Windows was
-  already very much a second-class citizen, as apparent from issues like
-  #5822 and others. Windows users may want to run Urbit through WSL
-  instead.
-  
-  Release notes:
-  
-  -   Revamped Urbit’s terminal stack. This release contains the first
-      phase of a longer-running project towards a next-generation terminal
-      experience. Highlights in this release include:
-      
-      -   Support for 2D cursor movement, and by extension 2D screen
-          drawing.
-          
-      -   Minimal mouse-click support.
-      
-      -   Faster pasting of large texts.
-      
-      -   Informal printfs (~&) now get rendered in grey, to visually
-          distinguish them from formal dill output.
-          
-  -   Updated versioning scheme for pre-release binaries.
-  
-  -   The code for the Vere runtime has been moved out of the urbit/urbit
-      repository, and now lives in urbit/vere.
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.17
