Note about user/group

--- a/firefly-iii/docker-compose.yml
+++ b/firefly-iii/docker-compose.yml
@@ -9,6 +9,7 @@ services:
 
   server:
     image: fireflyiii/core:version-5.7.18@sha256:f72a0dfcc2e12fb96d4a7f1e64834518692914ce40565904473f64401c1bda58
+    # This image runs under the user/group www-data:www-data
     # user: "1000:1000"
     restart: on-failure
     environment:
