Derive an app key

--- a/firefly-iii/docker-compose.yml
+++ b/firefly-iii/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     # user: "1000:1000"
     restart: on-failure
     environment:
-      APP_KEY: EGyAqs9c8X9sPgaWac9X0uYnh3vLyJz0
+      APP_KEY: $APP_FIREFLY_III_APP_KEY
       DB_HOST: firefly-iii_db_1
       DB_PORT: 3306
       DB_CONNECTION: mysql
