--- a/mercury-wallet/umbrel-app.yml
+++ b/mercury-wallet/umbrel-app.yml
@@ -15,7 +15,7 @@ releaseNotes: >-
   - Receive key verification
 developer: LayerTwoTech
 website: https://mercurywallet.com/
-dependencies:
+dependencies: []
 repo: https://github.com/layer2tech/mercury-wallet
 support: https://github.com/layer2tech/mercury-wallet/discussions
 port: 3000
@@ -26,3 +26,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+ submitter: Tom Trevethan 
+ submission: https://github.com/getumbrel/umbrel-apps/pull/366
